Fixed the alignment of the message in the quote box. :)

--- a/style.css
+++ b/style.css
@@ -87,12 +87,13 @@ p
 {
     font-size: 36px;
     color: #1F2937;
-    justify-content: center;
-    align-items: center;
 }
 
 
 .flex-container3
 {
     background-color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
